--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -6,8 +6,8 @@ service: default
 handlers:
 - url: /static
   static_dir: static/
-- url: /.*
-  script: main.app
+- url: .*
+  script: retail_cannabis_business_app.wsgi.application
 
 
 # Only pure Python libraries can be vendored
@@ -22,16 +22,17 @@ libraries:
   version: 2.7.11
 - name: MySQLdb
   version: 1.2.5
+- name: PIL
+  version: 1.1.7
 
 # Google App Engine limits application deployments to 10,000 uploaded files per
 # version. The skip_files section allows us to skip virtual environment files
-# to meet this requirement. The first 5 are the default regular expressions to
-# skip, while the last one is for all env/ files.
+# to meet this requirement.
 skip_files:
 - ^(.*/)?#.*#$
 - ^(.*/)?.*~$
 - ^(.*/)?.*\.py[co]$
 - ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\..*$
-- ^env/.*$
 - ^(.*/)?setuptools/script \(dev\).tmpl$
+- ^(.*/)?.*\.sh$
