--- a/backend/requirements-vendor.txt
+++ b/backend/requirements-vendor.txt
@@ -1,8 +1,8 @@
-Django
-social-auth-app-django
-djangorestframework
-django-filter
-markdown
-django-environ
-django-extensions
-django-cors-headers
+Django==1.11.5
+social-auth-app-django==2.0.0
+djangorestframework==3.7.3
+django-filter==1.1.0
+Markdown==2.6.9
+django-environ==0.4.4
+django-extensions==1.9.7
+django-cors-headers==2.1.0
