Prepare prod deployment

--- a/backend/app.env
+++ b/backend/app.env
@@ -1,7 +1,7 @@
 DEBUG=True
 SECRET_KEY=c-gy$4vfki_658^mp3tde%po(p4m+16n)$dzj$uq4bl(e$-olb
-DATABASE_URL=mysql://root:pass@127.0.0.1:3307/retail_cannabis_business
-DATABASE_CLOUDSQL_INSTANCE=retail-cannabis-business-test:us-central1:retail-cannabis-business-test
+DATABASE_URL=mysql://root:c-gy$4vfki@127.0.0.1:3307/retail_cannabis_business
+DATABASE_CLOUDSQL_INSTANCE=retail-cannabis-business:us-central1:retail-cannabis-business
 DATABASE_CLOUDSQL_NAME=retail_cannabis_business
 DATABASE_CLOUDSQL_USERNAME=root
-DATABASE_CLOUDSQL_PASSWORD=pass
+DATABASE_CLOUDSQL_PASSWORD=c-gy$4vfki
